Little structure change, done article preview for admin panel

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,9 @@
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
 }
+
+.my-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
